Sidenav width is now fixed to 300px (That prevents it from covering a part of the map when the window is resized).

--- a/aquapp-front/src/app/node-selector/node-selector.component.css
+++ b/aquapp-front/src/app/node-selector/node-selector.component.css
@@ -6,10 +6,16 @@
 
 .side-navbar {
     max-height: 100%;
+    width: 300px;
+}
+
+.sidenav-content {
+    width: 100%;
 }
 
 #mapid {
     height: 100%;
+    width: 100%;
 }
 
 /* Popup */
